Migrate to jspecify nullness annotations